examples/test/testpolicy13055.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13055
  namespace: namespace86
spec:
  podSelector:
    matchLabels:
      key30: value22
      key1: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value31
          key0: value47
          key41: value45
      podSelector:
        matchLabels:
          key0: value39
          key44: value34
          key39: value21
